[FIX] web: prevent overflow in button box
Steps to reproduce
==================

- Create a product with many variants
- Go to the form view
- Switch to the french language so that the text is long enough or edit
  the button label with studio

=> The button box goes outside the main view

Solution
========

- Set a max width on the control panel
- Set a min-width on stat buttons so they can reduce their size
- Hide the overflow as when a text is truncated, it goes outside

opw-4056439

X-original-commit: 2c687ebdf4532ac4e5a6bfc0a2e00a482ff58190

--- a/addons/web/static/src/views/form/button_box/button_box.scss
+++ b/addons/web/static/src/views/form/button_box/button_box.scss
@@ -43,6 +43,11 @@
         padding-top: 0;
         padding-bottom: 0;
         height: $-stat-button-height;
+        min-width: 0;
+
+        &:not(.dropdown) {
+            overflow: hidden;
+        }
 
         @include media-breakpoint-up(md) {
             min-width: 7.5em; // Arbitrary
